kubernetes/manifests/grav/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grav
  namespace: grav
  labels:
    app: grav
spec:
  selector:
    app: grav
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
