kubernetes/manifests/grav/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grav-network-policy
  namespace: grav
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
      - ingress
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cloudflare
    toPorts:
    - ports:
      - port: "80"
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-gateway-system
    toPorts:
    - ports:
      - port: "80"
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchName: codeload.github.com
    - matchName: getgrav.org
    - matchName: github.com
    - matchName: raw.githubusercontent.com
    - matchName: repo.packagist.org
    - matchName: packagist.org
